# component-energis

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: __init__.py  api_client.py  component.py  configuration.py  file_manager.py  manifest_manager.py  utils.py
tests/: test_api_client.py  test_configuration.py  test_file_manager.py  test_manifest_manager.py  test_state_manager.py  test_utils.py
