[project]
name = "component-energis"
version = "0.1.0"
description = "Keboola Energis extractor component"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "flake8>=7.2.0",
    "freezegun>=1.5.1",
    "httpx>=0.28.0",
    "keboola-component>=1.6.10",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "lxml>=5.3.1",
    "mock>=5.1.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "urllib3>=2.6.0",
]
